Working form and account

--- a/app/views/HousesView.html
+++ b/app/views/HousesView.html
@@ -2,7 +2,7 @@
     <section class="">
         <h1>Houses Page</h1>
         <div class="row bg-white">
-            <form class="" onsubmit="app.HouseController.newHouse()">
+            <form class="d-none" onsubmit="app.HouseController.newHouse()" id="create-house-form">
                <div class="m-1 col-4">
                 <label for="car-make">Bedrooms:</label>
                 <input required class="form-control" type="number" id="houses-bedrooms" name="bedrooms">
